--- a/inc/scss/components/_form.scss
+++ b/inc/scss/components/_form.scss
@@ -306,3 +306,7 @@ section {
     grid-gap: 2rem!important;
   }
 }
+#frm_field_162_container .page-template-contact .frm_image_options .frm_image_option_container img {
+  padding: 0;
+  height: unset;
+}
