--- a/inc/scss/base/_typography.scss
+++ b/inc/scss/base/_typography.scss
@@ -91,7 +91,7 @@ body {
   }
 
   @include respond(phone) {
-    font-size: 2.5rem;
+    font-size: 3.5rem;
   }
 }
 
@@ -112,6 +112,9 @@ body {
     font-size: 1.3rem;
     font-weight: 200;
     color: $color-primary;
+    @include respond(phone) {
+      font-size: 2rem;
+    }
 
     // @include respond(phone) {
     //   letter-spacing: 0.5rem;
@@ -119,11 +122,17 @@ body {
   }
   &--main {
     line-height: 1.2;
+    @include respond(phone) {
+      font-size: 3.5rem;
+    }
   }
   &--lower {
     display: block;
     color: $color-primary;
     font-size: 1.7rem;
+    @include respond(phone) {
+      font-size: 2rem;
+    }
   }
 }
 .heading-highlight {
