--- a/inc/scss/components/_feature-box.scss
+++ b/inc/scss/components/_feature-box.scss
@@ -278,7 +278,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top right;
-    border: 1px solid $color-text;
+    
     @include respond(phone) {
       min-height: 45rem;
     }
@@ -334,6 +334,7 @@
   .image {
     img {
       @include imageSize;
+      border: 1px solid $color-text;
     }
   }
 
@@ -341,6 +342,9 @@
     .text {
       padding: 0 4rem 2rem 0;
       // font-size: 1.2rem;
+      @include respond(phone) {
+        padding: 2rem;
+       }
     }
 
     ul {
@@ -348,6 +352,9 @@
       li {
         // padding-bottom: 1rem;
       }
+      @include respond(phone) {
+        padding: 2rem;
+       }
     }
 
     .heading-tertiary {
