--- a/inc/scss/layout/_header.scss
+++ b/inc/scss/layout/_header.scss
@@ -25,7 +25,7 @@
     }
   }
   @include respond(tab-port) {
-    height: 100vh !important;
+    height: 75vh;
   }
   // &__logo-box {
   //   position: absolute;
