--- a/inc/scss/main.scss
+++ b/inc/scss/main.scss
@@ -22,6 +22,7 @@
 @import "components/icon-box";
 @import "components/filters";
 @import "components/gallery";
+@import "components/toolbars";
 
 @import "layout/footer";
 @import "layout/grid";
