--- a/inc/scss/pages/_destinations.scss
+++ b/inc/scss/pages/_destinations.scss
@@ -118,7 +118,7 @@
     max-height: 0;
   overflow: hidden;
   transition: max-height 0.5s ease-out;
-  background: $color-primary-bg-alt;
+  background: $color-white;
   }
 }
 .text:first-of-type .heading-tertiary {
