--- a/inc/scss/components/_filters.scss
+++ b/inc/scss/components/_filters.scss
@@ -122,6 +122,15 @@
   &.open {
     transform: translateX(0rem);
     max-height: 90rem;
+    .mobile-filter--button {
+      width: 5rem;
+      transition: $slowEffect;
+      .filter-text {
+        opacity: 0;
+        max-width: 0;
+        transition: $fastEffect;
+      }
+    }
   }
   &--nav {
     width: 30rem;
@@ -139,9 +148,17 @@
     background-color: white;
     padding: 1rem;
     height: 5rem;
-    width: 5rem;
+    width: 12rem;
     display: flex;
     align-items: center;
     justify-content: center;
+    i {
+      padding-right: 1rem;
+    }
+    .filter-text {
+      text-transform: uppercase;
+      max-width: 5rem;
+      opacity: 1;
+    }
   }
 }
