--- a/inc/scss/layout/_navigation.scss
+++ b/inc/scss/layout/_navigation.scss
@@ -1,6 +1,7 @@
 .sidebar {
   height: 100%;
-  width: 400px;
+  width: 100vw;
+  max-width: 400px;
   position: fixed;
   top: 0;
   z-index: 1;
@@ -73,6 +74,7 @@
 
 .move-to-left {
   transform: translateX(-400px);
+  transition: all 0.5s;
 }
 
 // nav {
@@ -85,13 +87,25 @@
   list-style: none;
   position: relative;
   margin-top: 150px;
-  text-align: center;
+  padding-left: 20%;
 }
 
 .sidebar-item {
   margin: 30px 0;
   opacity: 0;
   transform: translateY(-20px);
+  a {
+    &:before {
+      content: "";
+      width: 4rem;
+      height: 2px;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      background-color: #aaa;
+      transition: all 0.7s ease-in-out;
+    }
+  }
 }
 
 .sidebar-item:first-child {
@@ -130,23 +144,23 @@
   font-size: 1.8em;
   text-transform: uppercase;
   position: relative;
-  padding-bottom: 7px;
+  padding-bottom: 2rem;
 }
 
-.sidebar-anchor:before {
-  content: "";
-  width: 0;
-  height: 2px;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  background-color: #fff;
-  transition: all 0.7s ease-in-out;
-}
+// .sidebar-anchor:before {
+//   content: "";
+//   width: 0;
+//   height: 2px;
+//   position: absolute;
+//   bottom: 0;
+//   left: 0;
+//   background-color: #fff;
+//   transition: all 0.7s ease-in-out;
+// }
 
-.sidebar-anchor:hover:before {
-  width: 100%;
-}
+// .sidebar-anchor:hover:before {
+//   width: 100%;
+// }
 
 .ua {
   position: absolute;
