--- a/inc/scss/pages/_destinations.scss
+++ b/inc/scss/pages/_destinations.scss
@@ -77,7 +77,7 @@
   .highlight-text {
     /* Style the button that is used to open and close the collapsible content */
 .collapsible {
-  background-color: #ccc;
+  background-color: #e6e4df;
   color: #444;
   cursor: pointer;
   font-family: $default-header-style;
@@ -109,7 +109,7 @@
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 .active, .collapsible:hover {
-  background-color: #ccc;
+  background-color: #e6e4df;
 }
 
 /* Style the collapsible content. Note: hidden by default */
